# HashTableBenchmark

./: CMakeLists.txt  LICENSE  README.md  build.sh
results/: README.md  report.ipynb  result_asus.json  result_containers.json  result_mbp_arm.json  result_mbp_intel.json  result_server.json
src/: mixed_ops_bench.cxx  ram_speed_bench.cxx  ram_usage_bench.cxx  ram_usage_bench.py  wrappers.hpp
src/sparsehash-2.0.4/: sparse_hash_map  sparsetable
src/sparsehash-2.0.4/internal/: densehashtable.h  sparseconfig.h  sparsehashtable.h
